--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -35,7 +35,7 @@
   <section id="about" class="about">
     <h2>About Me</h2>
     <div class="about-container">
-      <img src="/storage/emulated/0/Android/data/com.fazil.htmleditor/files/Documents/My portfolio /media/images/IMG_20250809_095031.jpg" alt="My Photo">
+      <img src="/storage/emulated/0/Android/data/com.fazil.htmleditor/files/Documents/Digital portfolio /media/images/IMG_20250809_095031.jpg" alt="My Photo">
       <div class="about-text">
         <p>I’m a web designer & developer who enjoys building simple and creative websites. I love coding, solving problems, and creating user-friendly designs.</p>
       </div>
@@ -98,6 +98,13 @@
       </div>
     </div>
   </section>
+  
+  <!-- Certificates Section -->
+<section id="certificates" class="certificates">
+  <h2>My Certificates</h2>
+  <p>Check out my achievements and certifications:</p>
+  <a href="https://drive.google.com/drive/folders/1-032nKsIOiIPwr5XhFrQuz95I98yQOFL" target="_blank" class="btn">View Certificates</a>
+</section>
 
   <!-- Contact -->
   <section id="contact" class="contact">
